# cpp-boilerplate

./: .cppcheck-suppressions-list  .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  func.cpp  func.hpp  main.cpp
test/: CMakeLists.txt  test1.cpp
